# paye

./: CHANGELOG.md  LICENSE  README.md  TODO.md  hmrc.toml  pyproject.toml
src/paye/: __init__.py  hmrc.toml  paye.py
src/paye/data/: hmrc.toml
tests/: conftest.py  test_exceptions.py  test_helpers.py  test_hmrc.py  test_payslip.py
tests/hmrc/2026/Scottish/: Gen_W1M1_mthly.csv  Gen_W1M1_wkly.csv  Gen_cumul_mthly.csv  Gen_cumul_wkly.csv  K_cumul_mthly.csv  K_cumul_wkly.csv
tests/hmrc/2026/Welsh/: Gen_W1M1_mthly.csv  Gen_W1M1_wkly.csv  Gen_cumul_mthly.csv  Gen_cumul_wkly.csv
tests/hmrc/2026/rest/: BR_monthly.csv  BR_weekly.csv  Gen_W1M1_mthly.csv  Gen_W1M1_wkly.csv  Gen_cumul_mthly.csv  Gen_cumul_wkly.csv  K_W1M1_mthly.csv  K_W1M1_wkly.csv  K_cumul_mthly.csv  K_cumul_wkly.csv  Large_code_mthly.csv  Large_code_wkly.csv
