[project]
name = "paye"
dynamic = ["version"]
authors = [
  { name="Paul Worrall", email="p.r.worrall@gmail.com" },
]
description = "A partial implementation of UK income tax Pay-As-You-Earn calculations"
readme = "README.md"
# Uses forward references for annotations which was introduced in 3.14
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = []

[project.urls]
Homepage = "https://github.com/Silver-Saucepan/paye"
Issues = "https://github.com/Silver-Saucepan/paye/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/paye/__about__.py"

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Don't mess with quotes
quote-style = "preserve"
