[build-system]
# Version 1.26 introduced support for license meta-data
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "paye"
dynamic = ["version"]
description = "An implementation of UK income tax Pay-As-You-Earn calculations"
authors = [{ name = "Paul Worrall", email = "p.r.worrall@gmail.com" }]
readme = "README.md"
# Uses forward references for annotations which was introduced in 3.14
requires-python = ">=3.14"
dependencies = ["fiscalyear"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  "Framework :: Hatch",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Office/Business :: Financial",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
]

[project.urls]
Documentation = "https://github.com/Silver-Saucepan/paye#readme"
Homepage = "https://github.com/Silver-Saucepan/paye"
Issues = "https://github.com/Silver-Saucepan/paye/issues"

[project.optional-dependencies]
dev = ["build"]

[tool.hatch.version]
path = "src/paye/__about__.py"

[tool.hatch.envs.hatch-test]
extra-args = ["-v"]
dependencies = [
  "pytest",
  "pytest-cov",
  "pandas",
  "openpyxl",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"
